# parallel-programming-in-multicore-ocaml

./: .ci.sh  .gitignore  LICENSE.md  README.md
.github/workflows/: main.yml
code/: Makefile
code/chan/: chan_blocking.ml  chan_buffer.ml  chan_poll.ml  dune  hello_chan.ml  senders_receivers.ml  senders_recievers.ml  task_distribution.ml
code/domains/: dune  hello_world.ml  nested_dom.ml  square_domain.ml
code/profiling/: dune  float_init_par.ml  float_init_par2.ml  float_init_par3.ml
code/task/: dune  fibonacci.ml  fibonacci_domains.ml  fibonacci_multicore.ml  matrix_multiplication.ml  matrix_multiplication_multicore.ml  three_matrix_multiplication.ml
