(test
  (name hello_chan)
  (modules hello_chan)
  (libraries domainslib))

(executable
  (name chan_blocking)
  (modules chan_blocking)
  (libraries domainslib))

(test
  (name chan_buffer)
  (modules chan_buffer)
  (libraries domainslib))

(test
  (name chan_poll)
  (modules chan_poll)
  (libraries domainslib))


(test
  (name senders_receivers)
  (modules senders_receivers)
  (libraries domainslib))

(test
  (name task_distribution)
  (modules task_distribution)
  (libraries domainslib))