(executable
  (name matrix_multiplication)
  (modules matrix_multiplication))

(executable
  (name matrix_multiplication_multicore)
  (modules matrix_multiplication_multicore)
  (libraries domainslib))

(executable
  (name three_matrix_multiplication)
  (modules three_matrix_multiplication)
  (libraries domainslib))

(executable
  (name fibonacci)
  (modules fibonacci)
  (libraries domainslib))

(executable
  (name fibonacci_multicore)
  (modules fibonacci_multicore)
  (libraries domainslib))

(executable
  (name fibonacci_domains)
  (modules fibonacci_domains))
