(test
  (name matrix_multiplication)
  (modules matrix_multiplication))

(test
  (name matrix_multiplication_multicore)
  (modules matrix_multiplication_multicore)
  (libraries domainslib))

(test
  (name three_matrix_multiplication)
  (modules three_matrix_multiplication)
  (libraries domainslib))

(test
  (name fibonacci)
  (modules fibonacci)
  (libraries domainslib))

(test
  (name fibonacci_multicore)
  (modules fibonacci_multicore)
  (libraries domainslib))

(test
  (name fibonacci_domains)
  (modules fibonacci_domains))
